istio/ms-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ms-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ms
spec:
  hosts:
  - "*"
  gateways:
  - ms-gateway
  http:
  - match:
    - uri:
        prefix: /members
    route:
    - destination:
        host: members
        port:
          number: 9080
